modified swagger and sorted based on uuid for packets to maintain order
