# api/swagger.json
@@ -326,6 +326,78 @@
           }
         
       },
+      "/api/users/{userId}/packets/{packetId}/phases": {
+        "get": {
+          "tags": ["Packets"],
+          "summary": "Returns a list of phases associated with a packet",
+          "responses": {
+            "200": {
+              "description": "A JSON array of packet phase objects",
+              "content": {
+                "application/json": {
+                  "schema": {
+                    "type": "array",
+                    "items": {
+                      "$ref": "#/components/schemas/PacketPhase"
+                    }
+                  }
+                }
+              }
+            }
+          }
+        },
+        "post": {
+          "tags": ["Packets"],
+          "summary": "Creates a new packet phase",
+          "requestBody": {
+            "required": true,
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/PacketPhase"
+                  }
+              }
+            }
+          }
+          },
+          "responses": {
+            "201": {"description": "Packet phase created successfully"},
+            "400": {"description": "Invalid input data"}
+          }
+        },
+        "put": {
+          "tags": ["Packets"],
+          "summary": "Updates an existing packet phase",
+          "parameters": [
+            {
+              "in": "path",
+              "name": "phaseId",
+              "required": true,
+              "schema": {
+                "type": "string"
+              },
+              "description": "The ID of the packet phase"
+            }
+          ],
+          "requestBody": {
+            "required": true,
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/PacketPhase"
+                }
+              }
+            }
+          },
+          "responses": {
+            "200": {"description": "Packet phase updated successfully"},
+            "400": {"description": "Invalid input data"},
+            "404": {"description": "Packet phase not found"}
+          }
+        }
+      },
       "/api/users/{userId}/packets/{packetId}/files/{fileId}": {
         "get": {
           "tags": ["Files"],
@@ -424,6 +496,7 @@
             "email": {"type": "string"}
           }
         },
+     
         "PacketPhase": {
           "type": "object",
           "properties": {
@@ -465,5 +538,7 @@
           "description": "Unauthorized - User does not have permission to access this file"
         }
       }
+    
     }
   }
+  
